# chat-app

./: Cargo.toml
migrations/2022-08-01-132255_create_users/: up.sql
src/: lib.rs  main.rs  schema.rs
src/middleware/: auth.rs
src/models/: user.rs
src/models/auth/: auth.rs  user.rs
src/models/chat/: lobby.rs  mod.rs
src/routes/auth/: confirmation.rs  login.rs  mod.rs  register.rs
src/routes/chat/: mod.rs  start_connection.rs
src/services/: jwt.rs  mail.rs  mod.rs  ws.rs
src/state/: app.rs  pool.rs
src/valid/: new_user_req.rs
